--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- Added -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Added -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="flutter_yt_dlp_example"
         android:name="${applicationName}"
